package eu.nicosworld.rithmo.core.session;

public record GameId(String value) {}
