package eu.nicosworld.rithmo.core.turn;

public record TurnState(

) {


}