package eu.nicosworld.rithmo.core.turn.action;

public class MoveAction {
}
