package eu.nicosworld.rithmo.core.turn.applier;

public class MoveApplier {
}
