package eu.nicosworld.rithmo.core.turn.resolver;

public class CaptureResolver {
}
